Add full support for Sellers
* Added full seller support to interface
* Added e2e test for seller management

Fixes #6

--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -155,7 +155,7 @@
     "edit-album": "Edit Album",
     "edit-catalogue": "Edit Catalogue",
     "edit-country": "Edit Country",
-    "edit-sellers": "Edit Seller",
+    "edit-seller": "Edit Seller",
     "edit-stamp-collection": "Edit Stamp Collection",
     "new-album": "New Album",
     "new-catalogue": "New Catalogue",
