Add Paging Control to Stamp Page
* Added unit test

Fixes #17

--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -73,6 +73,7 @@
     "filter-placeholder": "Filter",
     "issue": "Issue Year",
     "name": "Name",
+    "page-size": "Page Size",
     "stampCollection": "Stamp Collection"
   },
   "grade": {
