First stab at a working Stamp Editor (not complete)
* Updates are registered on stamp list
* Clicking grid icon does not select row
* Added uuidv4 generator function
* Allow for html in prompts (where allowed/configured)

#31

--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -100,7 +100,9 @@
     "delete-album": "Delete the album '{album}'?",
     "delete-country": "Delete the country '{country}'?",
     "delete-collection": "Delete the stamp collection '{collection}'?",
-    "delete-seller": "Delete the seller '{seller}'?"
+    "delete-seller": "Delete the seller '{seller}'?",
+    "delete-stamp": "Delete the stamp `{stamp}'?",
+    "save-failure": "An error occurred saving the object. The message is: <br/>'{message}'"
   },
   "models": {
     "albums": {
@@ -184,6 +186,7 @@
     "new-stamp": "New Stamp",
     "new-stamp-collection": "New Stamp Collection",
     "ownership-details": "Ownership Details",
+    "save-failure": "Save Error",
     "stamp-web-editor": "Stamp Web Editor"
   }
 }
