Stamp Editor updates
* Bumped the version of jsdom and vitest
* Bumped version of odata-filter-parser to v0.5.5
* Replaced deepclone with structuredClone( ) needing to use toRaw( ) for Proxy objects
* correct numeric inputs on stamp editor that output strings to coerce into the model as a float
* Added SellerSelector
* Moved asCurrencySting to CurrencyTools

#31

--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -71,11 +71,14 @@
     "album": "Album",
     "catalogue": "Catalogue",
     "catalogueType": "Catalogue Type",
+    "certificate": "Certificate",
+    "certified": "Certified or validated",
     "condition": "Condition",
     "country": "Country",
     "description": "Description",
     "filter-placeholder": "Filter",
     "grade": "Grade",
+    "image-path": "Image path",
     "issue": "Issue Year",
     "name": "Name",
     "notes": "Notes",
@@ -83,7 +86,10 @@
     "no-value-listed": "No value listed",
     "number": "Number",
     "page-size": "Page Size",
+    "pricePaid": "Price Paid",
+    "purchased": "Purchased",
     "rate": "Denomination",
+    "seller": "Seller",
     "stampCollection": "Stamp Collection",
     "value": "Value"
   },
