Add button with ability to regenerate the image path
Fixes #40

--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -89,6 +89,7 @@
     "pricePaid": "Price Paid",
     "purchased": "Purchased",
     "rate": "Denomination",
+    "regenerate-image": "Regenerate image path",
     "seller": "Seller",
     "stampCollection": "Stamp Collection",
     "value": "Value"
