Add Save and New to Stamp Editor
Fixes #41

--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -12,6 +12,7 @@
     "new-stamp-collection": "New Stamp Collection",
     "no": "No",
     "save": "Save",
+    "save-and-new": "Save and new",
     "select-all": "Select All",
     "show-card-view": "Show Card View",
     "show-list-view": "Show List View",
