--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -75,6 +75,7 @@
     "certificate": "Certificate",
     "certified": "Certified or validated",
     "condition": "Condition",
+    "copy-to-clipboard": "Copy to clipboard",
     "country": "Country",
     "deceptions": "Deceptions",
     "defects": "Defects",
@@ -108,6 +109,7 @@
   },
   "messages": {
     "cert-exists": "A certificate or expertization opinion exists",
+    "copied": "Value copied",
     "delete-album": "Delete the album '{album}'?",
     "delete-country": "Delete the country '{country}'?",
     "delete-collection": "Delete the stamp collection '{collection}'?",
