Misc playwright cleanup
* Refined toolbar of Stamp Collection

--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -4,6 +4,7 @@
     "clear-selection": "Clear All Selections",
     "delete": "Delete",
     "edit": "Edit",
+    "filter": "Filter",
     "find-stamps": "Find Stamps",
     "new-album": "New Album",
     "new-country": "New Country",
