Add refresh button on stamp list
Fixes #55

--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -19,6 +19,7 @@
     "no": "No",
     "print": "Print Current List",
     "purchased": "Set Purchase Price",
+    "refresh": "Refresh",
     "save": "Save",
     "save-and-new": "Save and new",
     "search": "Search",
