Initial Report Generation
* Initial Report generation (no options to configure)

#48

--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -213,6 +213,15 @@
     "next": "Next Page",
     "page": "Page {start} of {end}"
   },
+  "reports": {
+    "condition": "Condition",
+    "country": "Country",
+    "defaultTitle": "Stamp List",
+    "description": "Description",
+    "notes": "Notes",
+    "number": "Number",
+    "value": "Value"
+  },
   "reportType": {
     "CashValue": "Estimate Cash Value",
     "CatalogueValue": "Catalogue Value",
