Complete Report Generation printing
Fixes #48

--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -18,6 +18,7 @@
     "new-wantlist": "New Wantlist Stamp",
     "no": "No",
     "print": "Print Current List",
+    "print-report": "Print",
     "purchased": "Set Purchase Price",
     "refresh": "Refresh",
     "save": "Save",
@@ -119,6 +120,8 @@
     "filter-placeholder": "Filter",
     "grade": "Grade",
     "image-path": "Image path",
+    "include-countries": "Include Countries",
+    "include-notes": "Include Notes",
     "issue": "Issue Year",
     "modify-existing": "Modify existing values",
     "modify-image-path": "Modify image path",
@@ -132,6 +135,7 @@
     "purchased": "Purchased",
     "rate": "Denomination",
     "regenerate-image": "Regenerate image path",
+    "report-title": "Report Title",
     "select-property": "Properties to edit",
     "seller": "Seller",
     "stampCollection": "Stamp Collection",
@@ -254,6 +258,7 @@
     "edit-stamp": "Edit Stamp",
     "edit-stamp-collection": "Edit Stamp Collection",
     "editing-defaults": "Edit Defaults",
+    "generate-report": "Generate Report",
     "new-album": "New Album",
     "new-catalogue": "New Catalogue",
     "new-country": "New Country",
