Add the ability to convert and wantlist to a owned stamp
Fixes #44

--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -3,6 +3,7 @@
     "bulk-edit": "Bulk Edit Properties",
     "cancel": "Cancel",
     "clear-selection": "Clear All Selections",
+    "convert": "Convert",
     "delete": "Delete",
     "delete-selected": "Delete Selected",
     "edit": "Edit",
@@ -257,6 +258,7 @@
     "edit-seller": "Edit Seller",
     "edit-stamp": "Edit Stamp",
     "edit-stamp-collection": "Edit Stamp Collection",
+    "edit-stamp-wantlist": "Edit Wantlist Stamp",
     "editing-defaults": "Edit Defaults",
     "generate-report": "Generate Report",
     "new-album": "New Album",
@@ -265,6 +267,7 @@
     "new-seller": "New Seller",
     "new-stamp": "New Stamp",
     "new-stamp-collection": "New Stamp Collection",
+    "new-stamp-wantlist": "New Wantlist Stamp",
     "ownership-details": "Ownership Details",
     "purchase-price": "Set Purchase Price",
     "save-failure": "Save Error",
